# main.go
@@ -18,8 +18,9 @@ import (
 )
 
 type Config struct {
-	Port   string `mapstructure:"PORT"`
-	DBConn string `mapstructure:"DB_CONN"`
+	Port      string `mapstructure:"PORT"`
+	DBConn    string `mapstructure:"DB_CONN"`
+	JWTSecret string `mapstructure:"JWT_SECRET"`
 }
 
 // @title Kasir API
@@ -36,8 +37,9 @@ func main() {
 	}
 
 	config := Config{
-		Port:   viper.GetString("PORT"),
-		DBConn: viper.GetString("DB_CONN"),
+		Port:      viper.GetString("PORT"),
+		DBConn:    viper.GetString("DB_CONN"),
+		JWTSecret: viper.GetString("JWT_SECRET"),
 	}
 
 	db, err := database.InitDB(config.DBConn)
@@ -53,20 +55,30 @@ func main() {
 
 	// Dependency Injection
 	// Repositories
+	authRepo := repositories.NewAuthRepository(db)
 	categoryRepo := repositories.NewCategoryRepository(db)
 	productRepo := repositories.NewProductRepository(db)
+	userRepo := repositories.NewUserRepository(db)
 
 	// Services
+	authService := service.NewAuthService(authRepo, config.JWTSecret)
 	categoryService := service.NewCategoryService(categoryRepo)
 	productService := service.NewProductService(productRepo)
+	userService := service.NewUserService(userRepo)
 
 	// Handlers
+	authHandler := handler.NewAuthHandler(authService)
 	categoryHandler := handler.NewCategoryHandler(categoryService)
 	productHandler := handler.NewProductHandler(productService)
+	userHandler := handler.NewUserHandler(userService)
 
 	http.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) {
 		w.Write([]byte("API ready!"))
 	})
+
+	// Register routes - Auth
+	http.HandleFunc("POST /api/auth/register", authHandler.Register)
+	http.HandleFunc("POST /api/auth/login", authHandler.Login)
 
 	// Register routes - Products
 	http.HandleFunc("GET /api/products", productHandler.GetAll)
@@ -81,6 +93,12 @@ func main() {
 	http.HandleFunc("POST /api/categories", categoryHandler.HandleCategories)
 	http.HandleFunc("PUT /api/categories/{id}", categoryHandler.HandleCategoryByID)
 	http.HandleFunc("DELETE /api/categories/{id}", categoryHandler.HandleCategoryByID)
+
+	// Register routes - Users
+	http.HandleFunc("GET /api/users", userHandler.GetAll)
+	http.HandleFunc("GET /api/users/{id}", userHandler.GetById)
+	http.HandleFunc("PUT /api/users/{id}", userHandler.Update)
+	http.HandleFunc("DELETE /api/users/{id}", userHandler.Delete)
 
 	// Swagger
 	http.HandleFunc("/swagger/", httpSwagger.WrapHandler)
